added rds information, doc updates for new streaming branch, more information on index page.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
 
 <h2>amygdala</h2>
 
+<h3><a href="http://thinkupapp.com">ThinkUp</a>-related documents</h3>
+
   <ul>
-    <li><a href="./twitter_streaming.html">Information on the alpha ThinkUp Twitter Realtime (User Streams) Branch</a></li>
+    <li><a href="./twitter_streaming.html">Information on the alpha ThinkUp Twitter Realtime (User Streams) Branch</a>
+        <br>&nbsp;</li>
+    <li><a href="https://gist.github.com/d2f450a29ba08ac588c1">Using AWS RDS with an EC2 ThinkUp installation</a></li>
   </ul>
 
 </body>
