site streams info

--- a/index.html
+++ b/index.html
@@ -16,9 +16,14 @@
 
 <h3><a href="http://thinkupapp.com">ThinkUp</a>-related documents</h3>
 
+ <ul>
+  <li><a href="sstreams_writeup.html">Preliminary Version of Site Streams in ThinkUp</a></li>
+ </ul>
+
   <ul>
-    <li><a href="./twitter_streaming.html">Information on the alpha ThinkUp Twitter Realtime (User Streams) Branch</a>
-        <br>&nbsp;</li>
+    <li>Information on the Twitter Realtime plugin now lives under the ThinkUp documentation.
+    <!-- <li><a href="./twitter_streaming.html">Information on the alpha ThinkUp Twitter Realtime (User Streams) Branch</a> -->
+        <!-- <br>&nbsp;</li> -->
     <li><a href="https://gist.github.com/d2f450a29ba08ac588c1">Using AWS RDS with an EC2 ThinkUp installation</a></li>
   </ul>
 
